src/assets/App.css
@import url('https://fonts.googleapis.com/css2?family=Sarabun:wght@200&display=swap');

:root {
  --color-primary: #b8b8ff;
  --color-secondary: #9381ff;
  --color-tertiary: #f8f7ff;
  --color-text-primary: #f0f0f0;
  --color-text-secondary: #FFD8BE;
  --color-text-tertiary: #242038;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'Sarabun', sans-serif;
}

.App {
  height: 100vh;
  width: 100vw;
  background: var(--color-tertiary);
  overflow-x: hidden;
}

main {
  height: 95%;
  display: flex;
  flex-direction: row;
}

.NavBar {
  height: 5%;
  width: 100%;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  background-image: linear-gradient(to top left, var(--color-primary), var(--color-secondary));
  position: sticky;
  top: 0;
  
}

.NavBar h1 {
  margin-left: 1rem;
  color: var(--color-text-tertiary);
  font-style: italic;
  cursor: pointer;
}

.NavBar h1:hover {
  color: var(--color-text-secondary);
}

.navIcon {
  margin-right: 3rem;
  background: var(--color-tertiary);
  display: flex;
  align-items: center;
  justify-content: center;
  height: 2.2rem;
  width: 2.2rem;
  border-radius: 50%;
  font-size: 1.5rem;
  cursor: pointer;
}

.SideBar {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  width: 8%;
  background: var(--color-primary);
  height: 100%;
  position: fixed;
  top: 5vh;
}

.SideBarItem {
  display: flex;
  align-items: center;
  padding-left: 1rem;
  width: 100%;
  height: 5%;
  color: var(--color-text-tertiary);
  text-decoration: none;
  font-size: 1rem;
}

.SideBarItem:hover {
  color: var(--color-secondary);
  background: var(--color-tertiary);
}

.SideBarIcon {
  margin-right: 1rem;
}

